Showcase-items flex-wrap fix

--- a/src/components/Showcase.css
+++ b/src/components/Showcase.css
@@ -26,7 +26,8 @@ h1 {
 
 .showcase__items {
   margin-bottom: 24px;
-  display: grid;
+  display:flex;
+  flex-wrap:wrap;
 }
 
 .showcase__item {
